--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,8 +12,9 @@
 </head>
 <body>
     <div>
-        Microblog: 
+        Blog-Site: 
         <a href="{{ url_for('index') }}">Home</a>
+        <a href="{{ url_for('explore') }}">Explore</a>
         {% if current_user.is_anonymous %}
         <a href="{{ url_for('login') }}">Login</a>
         {% else %}
