--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -23,6 +23,9 @@
             {{ form.remember_me.label }}
         </p>
         <p> {{ form.submit() }}  </p>
+        <p>
+            <a href="{{ url_for('reset_password_request') }} ">Forgot Your Password?</a>
+        </p>
         <p>New User? <a href="{{ url_for('register') }}">Click to Register</a></p>
     </form>
 {% endblock %}
