--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,13 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if title %}
-        <title>{{title}} - Blog-Site</title>
+    <title>{{title}} - Blog-Site</title>
     {% else %}
-        <title>Welcome to  My Blog-Site</title>
+    <title>Welcome to  My Blog-Site</title>
     {% endif %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='/style.css') }}">
 </head>
 <body>
     <div>
+        <ul class="nav">
+            <li><a class="_active" href="{{ url_for('index') }}">Home</a> </li>
+            <li><a href="{{ url_for('explore') }}">Explore</a> </li>
+            {% if current_user.is_anonymous %}
+            <li><a class="_active" href="{{ url_for('login') }}">Login</a> </li>
+            {% else %}
+            <li><a href="{{ url_for('user', username=current_user.username) }}">Profile</a> </li>
+            <li><a href="{{ url_for('logout') }}">Logout</a> </li>
+            {% endif %}
+        </ul>
+    </div>
+    
+    <!-- 
+    <div class="nav">
         Blog-Site: 
         <a href="{{ url_for('index') }}">Home</a>
         <a href="{{ url_for('explore') }}">Explore</a>
@@ -22,16 +37,22 @@
         <a href=" {{ url_for('logout') }}  ">Logout</a>
         {% endif %}
     </div>
+-->
     <hr>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
-        <ul>
+        <ul class="flash-msg">
+            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
             {% for message in messages %}
-            <li> {{ messages}}  </li>
+            <li style="color: red;"> {{ messages}}  </li>
             {% endfor %}
         </ul>
     {% endif %}
     {% endwith %}
-    {% block content %}{% endblock %}
+    <div class="container">
+        {% block content %}
+        <!-- BLOCK FOR DIFFERENT PAGES -->
+        {% endblock %}
+    </div>
 </body>
 </html>
