--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -22,7 +22,7 @@
             {{ form.remember_me() }}
             {{ form.remember_me.label }}
         </p>
-        <p> {{ form.submit() }}  </p>
+        <p> {{ form.submit(class_="button btn-login") }}  </p>
         <p>
             <a href="{{ url_for('reset_password_request') }} ">Forgot Your Password?</a>
         </p>
