--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,7 +4,7 @@
 
     <table>
         <tr valing='top'>
-            <td><img src=" {{ user.avatar(128) }}  " alt="User avatar"></td>
+            <td><img class="img-profile" src=" {{ user.avatar(128) }}  " alt="User avatar"></td>
             <td>
                 <h1>User: {{ user.username }} </h1>
                 {% if user.about_me %} <p>{{ user.about_me }} </p> {% endif %}
