--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,11 +1,16 @@
-<table>
-    <tr valing='top'>
-        <td><img src="{{ post.author.avatar(36) }} " alt="user avatar"></td>
+<table class="table table-hover">
+    <tr>
+        <td width="70px">
+            <a href="{{ url_for('user', username=post.author.username) }}">
+                <img class="img-post" src="{{ post.author.avatar(70) }} " alt="user avatar">
+            </a>
+        </td>
         <td>
             <a href="{{ url_for('user', username=post.author.username) }}  ">
-            {{ post.author.username }} 
+                {{ post.author.username }} 
             </a>
-            says: <br> {{ post.body }}
+            says: <br> 
+            {{ post.body }}
         </td>
     </tr>
 </table>
