--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,9 +9,15 @@
     {% else %}
     <title>Welcome to  My Blog-Site</title>
     {% endif %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='/style.css') }}">
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='/style.css') }}"> -->
+
+    <!-- JavaScript Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- 
     <div>
         <ul class="nav">
             <li><a class="_active" href="{{ url_for('index') }}">Home</a> </li>
@@ -24,7 +30,43 @@
             {% endif %}
         </ul>
     </div>
-    
+
+     -->
+     <div class="container-fluid">
+
+         <nav class="navbar navbar-expand-sm navbar-dark bg-dark" style="padding-left: 10px;">
+            <a class="navbar-brand" href="{{ url_for('index') }}">Blog-Site</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse container-fluid justify-content-between" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ url_for('index') }}">Home <span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item active">
+                        <a class="nav-link" href="{{ url_for('explore') }}">Explore <span class="sr-only"></span></a>
+                    </li>
+                    {% if current_user.is_anonymous %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">Login</a> 
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('user', username=current_user.username) }}">Profile</a> 
+                    </li>
+                </ul>
+                
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link float-end" href="{{ url_for('logout') }}">Logout</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+    </div>
     <!-- 
     <div class="nav">
         Blog-Site: 
@@ -38,18 +80,18 @@
         {% endif %}
     </div>
 -->
-    <hr>
+    <!-- <hr> -->
     {% with messages = get_flashed_messages() %}
     {% if messages %}
         <ul class="flash-msg">
-            <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+            <!-- <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> -->
             {% for message in messages %}
-            <li style="color: red;"> {{ messages}}  </li>
+            <li style="color: red; list-style: none;" class="alert alert-primary" role="alert"> {{ messages}}  </li>
             {% endfor %}
         </ul>
     {% endif %}
     {% endwith %}
-    <div class="container">
+    <div class="container-lg">
         {% block content %}
         <!-- BLOCK FOR DIFFERENT PAGES -->
         {% endblock %}
