--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,16 +12,17 @@
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>{{ form.submit(class_="button btn-login") }}</p>
+        <p>{{ form.submit(class_="btn btn-outline-dark") }}</p>
     </form>
     {% endif %}
     {% for post in posts %}
         {% include '_post.html' %}
     {% endfor %}
-    {% if prev_url %}
-        <a href="{{ prev_url }}  ">Newer posts</a>
-    {% endif %}
-    {% if next_url %}
-        <a href="{{ next_url }}  ">Older posts</a>
-    {% endif %}
+
+    {% if prev_url %}   
+    <a href="{{ prev_url }}  ">Newer posts</a> 
+    {% endif %}  
+    {% if next_url %} 
+       <a href="{{ next_url }}  ">Older posts</a>    
+    {% endif %} 
 {% endblock %}
