--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -16,14 +16,14 @@
                 <p>
                     <form action="{{ url_for('follow', username=user.username) }}" method="POST">
                         {{ form.hidden_tag() }}
-                        {{ form.submit(value='Follow') }}
+                        {{ form.submit(value='Follow', class='btn btn-outline-dark') }}
                     </form>
                 </p>
                 {% else %}
                 <p>
                     <form action="{{ url_for('unfollow', username=user.username) }}" method="POST">
                         {{ form.hidden_tag() }}
-                        {{ form.submit(value='Unfollow') }}
+                        {{ form.submit(value='Unfollow', class='btn btn-outline-dark') }}
                     </form>
                 </p>
                 {% endif %}
