--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,10 +11,10 @@
     {% endif %}
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="{{ url_for('static', filename='/style.css') }}"> -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='/main.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/login_and_register.css') }}">
 
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <!-- 
@@ -83,18 +83,25 @@
     <!-- <hr> -->
     {% with messages = get_flashed_messages() %}
     {% if messages %}
-        <ul class="flash-msg">
+        <ul class="flash-msg container">
             <!-- <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span> -->
             {% for message in messages %}
-            <li style="color: red; list-style: none;" class="alert alert-primary" role="alert"> {{ messages}}  </li>
+            <li style="color: red; list-style: none;" class="alert alert-dark" role="alert"> {{ messages}} <span class="closebtn btn btn-close" onclick="this.parentElement.style.display='none';"></span> </li>
             {% endfor %}
         </ul>
     {% endif %}
     {% endwith %}
-    <div class="container-lg">
+    <div class="container-lg make_center">
         {% block content %}
         <!-- BLOCK FOR DIFFERENT PAGES -->
         {% endblock %}
     </div>
+    <footer>
+        <hr>
+        Made with &hearts; by  <a href="https://prasantmahato.github.io" target="_blank"><strong style="padding-left: 4px;"> Prasant Mahato</strong> </a> 
+    </footer>
+
+ <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
