--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,10 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='/main.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='/login_and_register.css') }}">
 
-
+     <!-- Integrating Moment js for relative dates and time. -->
+     {% block scripts %}
+        {{ moment.include_moment() }}
+    {% endblock %}
 </head>
 <body>
     <!-- 
